--- a/package.json
+++ b/package.json
@@ -15,8 +15,23 @@
     "react-scripts": "3.4.4",
     "typescript": "~3.7.2"
   },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.2",
+    "prettier": "2.1.2",
+    "typescript": "^3.9.7"
+  },
   "scripts": {
     "start": "react-scripts start",
+    "lint": "eslint --ext .tsx --ext .ts src/",
+    "format": "prettier --check ./src",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,6 +49,34 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "lint-staged": {
+    "./src/**": [
+      "prettier --write .",
+      "git add ."
+    ],
+    "*.{ts,tsx}": [
+      "jest --passWithNoTests",
+      "eslint --ext .tsx --ext .ts src/ --fix",
+      "prettier --write .",
+      "git add ."
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
     ]
   }
 }
